# nlp-graph

./: .gitignore  CMakeLists.txt  README.txt  build_3rdparty.sh  clean.sh  copy_dylib.sh  install_grid-k520_driver.sh
NLPGraph/: CMakeLists.txt  context.cpp  context.h  model_postgres.sql  nlpgraph.h
NLPGraph/NLPGraph.xcodeproj/: project.pbxproj
NLPGraph/NLPGraph.xcodeproj/project.xcworkspace/xcuserdata/schang.xcuserdatad/: UserInterfaceState.xcuserstate
NLPGraph/NLPGraph.xcodeproj/xcuserdata/schang.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
NLPGraph/NLPGraph.xcodeproj/xcuserdata/schang.xcuserdatad/xcschemes/: NLPGraph.xcscheme  NLPGraphTests.xcscheme  xcschememanagement.plist
NLPGraph/NLPGraphTests/: CMakeLists.txt  nlpgraph_tests.cpp  nlpgraph_tests.h
NLPGraph/NLPGraphTests/calc/: levenstein_damerau_test.cpp
NLPGraph/NLPGraphTests/dao/postgres/: model_postgres_test.cpp
NLPGraph/NLPGraphTests/util/: resource_pool_test.cpp
NLPGraph/calc/: kohonen_som.cpp  kohonen_som.h  levenstein_damerau.cpp  levenstein_damerau.h  smith_waterman.cpp  smith_waterman.h
NLPGraph/calc/kohonen_som/: kohonen_som_data.cpp  kohonen_som_data.h  kohonen_som_result.cpp  kohonen_som_result.h  kohonen_som_sample_data.cpp  kohonen_som_sample_data.h
NLPGraph/calc/levenstein_damerau/: levenstein_damerau_data.cpp  levenstein_damerau_data.h  levenstein_damerau_reconstruct_data.cpp  levenstein_damerau_reconstruct_data.h
NLPGraph/calc/smith_waterman/: smith_waterman_cost.cl.h  smith_waterman_data.cpp  smith_waterman_data.h  smith_waterman_dists.cl.h  smith_waterman_matrices.cl.h  smith_waterman_util.cl.h
NLPGraph/dao/: model.h  model_exception.h  symbol_provider.h
NLPGraph/dao/postgres/: model_postgres.cpp  model_postgres.h  symbol_provider_postgres.cpp  symbol_provider_postgres.h
NLPGraph/dto/: input_channel.h  recollection.h  recollection_exception.h  symbol.h
NLPGraph/math/: function_1d.cpp  function_1d.h  generator.h
NLPGraph/math/function/: logistic.cpp  logistic.h  tanh.cpp  tanh.h
NLPGraph/neural/: constant.h  network.cpp  network.h  network_run_data.cpp  network_run_data.h  network_runner.h  network_trainer.h  network_training_data.cpp  network_training_data.h  neural.h  neuron.cpp  neuron.h  synapse.cpp  synapse.h
NLPGraph/util/: file.cpp  file.h  logger.h  math.cpp  math.h  opencl.cpp  opencl.h  resource_pool.h  string.cpp  string.h  time_helper.cpp  time_helper.h
NLPGraphTests/: CMakeLists.txt  NLPGraphTests  nlpgraph_tests.h
NLPGraphTests/calc/: kohonen_som_test.cpp  levenstein_damerau_test.cpp  smith_waterman_test.cpp
NLPGraphTests/dao/postgres/: model_postgres_test.cpp
NLPGraphTests/neural/: network_test.cpp
NLPGraphTests/util/: opencl_test.cpp  resource_pool_test.cpp
rnd/: binary_search.js  binary_search.js~
